# EEProject

./: CMakeLists.txt  README  main.c  serverAudio.sh  streamAudio.sh
Application/: CMakeCache.txt  Makefile  audio.c  audio.h  cmake_install.cmake  connection.c  connection.h  main.c
Client/: client.c  client.h  connection.c  connection.h  main.c
Server/: server.c
TRAINING/: .gpio_test.c.swp  gpio_handler.c  gpio_handler.h  gpio_test  gpio_test.c  hellopi  hellopi.c  make1
